<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.ghost.HomeScreen">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ghost_title"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/ghost_title_text_view"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/play_text_button"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/play_button"
        android:onClick="onPlayButtonClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/rules_text_button"
        android:id="@+id/rules_button"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:onClick="onRulesButtonClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_text_button"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/scores_button"
        android:onClick="onScoresButtonClick"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
