<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.RulesScreen">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rules_screen_text"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/rules_screen_text_view" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_rules_text"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:id="@+id/first_rules_text_view" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/play_text_button"
        android:id="@+id/rules_play_button"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:onClick="onPlayButtonClick"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
