<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.SettingScreen">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_text"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:id="@+id/setting_text_view" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player1_name_text"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:id="@+id/player1_name_text_view" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_player1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner_player1"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player2_name_text"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="2dp"
        android:id="@+id/player2_name_text_view" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_player2" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner_player2"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dictionary_text"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:id="@+id/dictionary_text_view" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_dictionary" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/play_text_button"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/play_setting_button"
        android:layout_gravity="center_horizontal"
        android:onClick="onPlayButtonClick"/>

</LinearLayout>
