<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.ghost.WinnerScreen">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/congrats_text"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:id="@+id/congratsTextView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/winnerTextView"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/win_text"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:id="@+id/winTextView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/reasonWinningTextView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_text_button"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:id="@+id/highScoresButton"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
