<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GamePlay">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_player_game_play"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:id="@+id/player_name"
        android:layout_gravity="center_horizontal"
        tools:ignore="SpUsage" />
    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:layout_marginBottom="70dp"
        android:id="@+id/word_fragment"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="30dp"
        android:background="@color/grey"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_input"
        android:inputType="textCapCharacters"
        android:hint="@string/user_input_edit_text"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/submitTextButton"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:id="@+id/submit_button"
        android:onClick="onSubmitClickButton"
        android:layout_gravity="center_horizontal"
        tools:ignore="SpUsage" />
</LinearLayout>
