<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.ghost.ScoresActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/high_scores_text"
        android:textSize="25dp"
        android:id="@+id/highScoreTextView" />

    <View
        android:layout_width = "fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:id="@+id/positionsListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".7"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:id="@+id/highScoreListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".4"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:id="@+id/scoresListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".7"/>

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/new_game_text"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/newGameButton"
        android:onClick="onNewGameButtonClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/homeTextButton"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:id="@+id/homeButton"
        android:onClick="onHomeButtonClick"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
